@@ -5,6 +5,7 @@ BUG: Ticket#656 - TDatePicker does not return correct value when in callback mod
 BUG: Ticket#662 - Ensure TForm to properly encode the ampersand in action URL (Qiang)
 BUG: Ticket#666 - TActiveRecord::deleteAll() method always requires a criteria or null parameter (Qiang)
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
+BUG: Ticket#648 - Validation: onClick and onBlur events order (Christophe)
 ENH: Ticket#667 - Added TFeedService.ContentType property (Qiang)
 ENH: Ticket#577 - Added image button support for TPager (Qiang)
 ENH: Added THead requirement check (Qiang)
